<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">SSR</string>
  <string name="quick_toggle">Toggle</string>

  <!-- global/misc category -->
  <string name="misc_cat">Misc</string>
  <string name="profile">Profile</string>
  <string name="profile_summary">Switch to another profile or add new profiles</string>
  <string name="nat">NAT mode (deprecated)</string>
  <string name="nat_summary">Use NAT mode instead of VPN mode. Requires ROOT permission.</string>
  <string name="stat">Network Traffic</string>
  <string name="stat_summary">Sent: \t\t\t\t\t%3$s\t↑\t%1$s/s\nReceived: \t%4$s\t↓\t%2$s/s</string>
  <string name="stat_profiles">%1$s↑\t%2$s↓</string>
  <string name="traffic_summary">%1$s/s↑\t%2$s/s↓</string>
  <plurals name="bytes" translatable="false">
    <item quantity="one">Byte</item>
    <item quantity="other">Bytes</item>
  </plurals>
  <string name="connection_test_pending">Check Connectivity</string>
  <string name="connection_test_testing">Testing…</string>
  <string name="connection_test_available">Success: %dms latency</string>
  <string name="connection_test_error">Fail to detect internet connection: %s</string>
  <string name="connection_test_fail">Internet Unavailable</string>
  <string name="connection_test_error_status_code">Error code: #%d</string>

  <!-- proxy category -->
  <string name="proxy_cat">Server Settings</string>
  <string name="profile_name">Profile Name</string>
  <string name="proxy">Server</string>
  <string name="remote_port">Remote Port</string>
  <string name="port">Local Port</string>
  <string name="sitekey">Password</string>
  <string name="protocol">Protocol</string>
  <string name="obfs">Obfs</string>
  <string name="obfs_param">Obfs Param</string>
  <string name="obfs_param_summary">Obfs param you input in panel</string>
  <string name="enc_method">Encrypt Method</string>

  <!-- feature category -->
  <string name="feature_cat">Feature Settings</string>
  <string name="ipv6">IPv6 Route</string>
  <string name="ipv6_summary">Redirect IPv6 traffic to remote</string>
  <string name="onetime_auth">One-time Authentication</string>
  <string name="onetime_auth_summary">Enable one-time authentication</string>
  <string name="http_proxy">HTTP Proxy</string>
  <string name="http_proxy_summary">Local HTTP Proxy</string>
  <string name="dns_proxy">DNS Proxy</string>
  <string name="dns_proxy_summary">Redirect DNS queries to remote</string>
  <string name="auto_set_gfwlist">CHN Route</string>
  <string name="auto_set_gfwlist_summary">Bypass all sites located in China
  </string>
  <string name="route_list">Route</string>
  <string-array name="route_entry">
    <item>All</item>
    <item>Bypass LAN</item>
    <item>Bypass China</item>
    <item>Bypass LAN &amp; China</item>
    <item>GFW List</item>
    <item>China List</item>
  </string-array>
  <string name="proxied_apps">Per-App Proxy</string>
  <string name="proxied_apps_summary">Set proxy for selected apps, requires NAT mode under Android 4.x</string>
  <string name="on">On</string>
  <string name="bypass_apps">Bypass Mode</string>
  <string name="bypass_apps_summary">Enable this option to bypass selected apps</string>
  <string name="auto_connect">Auto Connect</string>
  <string name="auto_connect_summary">Enable Shadowsocks on startup</string>
  <string name="tcp_fastopen_summary">Toggling requires ROOT permission</string>
  <string name="tcp_fastopen_summary_unsupported">Unsupported kernel version: %s &lt; 3.7.1</string>
  <string name="udp_dns">UDP Forwarding</string>
  <string name="udp_dns_summary">Forward UDP packets to remote</string>
  <string name="dns">International DNS</string>
  <string name="dns_summary">Use to resolve outside the mainland of China\'s domains,e.g. 8.8.8.8:53</string>
  <string name="china_dns">China DNS</string>
  <string name="china_dns_summary">Use to resolve China\'s domains,e.g. 223.5.5.5:53</string>

  <!-- notification category -->
  <string name="forward_success">Shadowsocks started.</string>
  <string name="invalid_server">Invalid server name</string>
  <string name="service_failed">Failed to connect the remote server</string>
  <string name="method_unsafe">WARNING: The current encryption method is unsafe</string>
  <string name="nat_deprecated">WARNING: NAT mode has been deprecated since Android 5.0</string>
  <string name="nat_no_root">NAT mode requires ROOT permission</string>
  <string name="switch_to_vpn">Switch to VPN mode</string>
  <string name="stop">Stop</string>
  <string name="stopping">Shutting down…</string>
  <string name="vpn_error">%s</string>
  <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
  <string name="quick_switch">Switch</string>
  <string name="profile_invalid_input">No valid profile data found.</string>

  <!-- alert category -->
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="close">Close</string>
  <string name="profile_empty">Please select a profile</string>
  <string name="proxy_empty">Proxy/Password should not be empty</string>
  <string name="connect">Connect</string>
  <string name="initializing">Initializing…</string>
  <string name="recovering">Resetting…</string>
  <string name="loading">Loading…</string>
  <string name="remove_profile">Remove this profile "%s"?</string>

  <!-- menu category -->
  <string name="profiles">Profiles</string>
  <string name="settings">Settings</string>
  <string name="recovery">Reset</string>
  <string name="recovery_summary">Reset all the background services</string>
  <string name="about">About</string>
  <string name="about_title">Shadowsocks %s</string>
  <string name="edit">Edit</string>
  <string name="share">Share</string>
  <string name="share_message">Scan QR code or use Android Beam (NFC)</string>
  <string name="share_message_without_nfc">Scan QR code</string>
  <string name="share_message_nfc_disabled">Scan QR code\nAndroid Beam is disabled</string>
  <string name="turn_on_nfc">Turn on NFC &amp; Android Beam</string>
  <string name="flush_dnscache">Flush DNS cache</string>
  <string name="flush_dnscache_summary">Only useful in NAT mode. Requires ROOT permission.</string>
  <string name="flush_dnscache_no_root">Flush DNS cache cannot proceed without ROOT permission</string>
  <string name="flushing">Flushing</string>
  <string name="add_profile">Add Profile</string>
  <string name="action_apply_all">Apply Settings to All Profiles</string>
  <string name="action_export">Export to Clipboard</string>
  <string name="action_import">Import from Clipboard</string>
  <string name="action_export_msg">Successfully export!</string>
  <string name="action_export_err">Failed to export.</string>
  <string name="action_import_msg">Successfully import!</string>
  <string name="action_import_err">Failed to import.</string>

  <!-- profile -->
  <string name="profile_manager_dialog">Profiles</string>
  <string name="profile_manager_dialog_content">&#8226; Tap to select a profile;\n&#8226; Swipe left/right or press left
    to remove;\n&#8226; Long press to reorder profiles.</string>
  <string name="gotcha">Gotcha!</string>
  <string name="profile_config">Profile config</string>
  <string name="unsaved_changes_prompt">Changes not saved. Do you want to save?</string>
  <string name="apply">Apply</string>
  <string name="delete">Remove</string>
  <string name="delete_confirm_prompt">Are you sure you want to remove this profile?</string>
  <string name="share_qr_nfc">QR code/NFC</string>
  <string name="add_profile_dialog">Add this Shadowsocks Profile?</string>
  <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
  <string name="add_profile_methods_manual_settings">Manual Settings</string>
  <string name="add_profile_nfc_hint_title">Use Android Beam (NFC) to add profile</string>
  <string name="add_profile_nfc_hint">Keep both devices screen on, on the other device, click profile\'s share button, bring them together (back to back).\nYou also can scan a nfc tag.</string>
  <string name="add_profile_scanner_permission_required">Camera permission is required for scanning QR code.</string>
  <string name="copy_url">Copy URL</string>
  <plurals name="removed">
    <item quantity="one">Removed</item>
    <item quantity="other">%d items removed</item>
  </plurals>
  <string name="undo">Undo</string>

  <!-- tasker -->
  <string name="toggle_service_state">Start the service</string>
  <string name="start_service_default">Connect to the current server</string>
  <string name="start_service">Connect to %s</string>
  <string name="stop_service">Switch to %s</string>
  <string name="profile_default">Use the current profile</string>

  <!-- status -->
  <string name="sent">Sent:</string>
  <string name="received">Received:</string>
  <string name="connecting">Connecting...</string>
  <string name="vpn_connected">Connected, tap to check connection</string>
  <string name="nat_connected">Connected</string>
  <string name="not_connected">Not connected</string>
  <string name="shutting_down">Shutting down...</string>

  <!-- kcp -->
  <string name="kcp" translatable="false">KCP</string>
  <string name="kcp_summary">Enable Shadowsocks over KCP</string>
  <string name="kcp_port">KCP Port</string>
  <string name="kcp_port_summary">%d (port number of the remote KCPTUN server)</string>
  <string name="kcpcli">KCP Parameters (CLI)</string>
</resources>
