<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res/net.htcp.shadowsocksr">

    <be.mygod.preference.PreferenceCategory
            android:title="@string/proxy_cat">

        <be.mygod.preference.EditTextPreference
                android:key="profileName"
                android:summary="%s"
                android:title="@string/profile_name"/>
        <be.mygod.preference.EditTextPreference
                android:key="proxy"
                android:summary="%s"
                android:title="@string/proxy"/>
        <be.mygod.preference.NumberPickerPreference
                app:min="1"
                app:max="65535"
                android:key="remotePortNum"
                android:summary="%d"
                android:title="@string/remote_port"/>
        <be.mygod.preference.NumberPickerPreference
                app:min="1025"
                app:max="65535"
                android:key="localPortNum"
                android:summary="%d"
                android:title="@string/port"/>
        <be.mygod.preference.EditTextPreference
                android:inputType="textPassword"
                android:key="sitekey"
                android:summary="%s"
                android:title="@string/sitekey"/>
        <DropDownPreference
                android:key="encMethod"
                android:entries="@array/enc_method_entry"
                android:entryValues="@array/enc_method_value"
                android:summary="%s"
                android:title="@string/enc_method"/>
        <DropDownPreference
                android:key="protocol"
                android:entries="@array/protocol_entry"
                android:entryValues="@array/protocol_value"
                android:summary="%s"
                android:title="@string/protocol"/>
        <DropDownPreference
                android:key="obfs"
                android:entries="@array/obfs_entry"
                android:entryValues="@array/obfs_value"
                android:summary="%s"
                android:title="@string/obfs"/>
        <be.mygod.preference.EditTextPreference
                android:key="obfs_param"
                android:summary="@string/obfs_param_summary"
                android:title="@string/obfs_param"/>
        <SwitchPreference
                android:key="isAuth"
                android:summary="@string/onetime_auth_summary"
                android:title="@string/onetime_auth"/>

    </be.mygod.preference.PreferenceCategory>

    <be.mygod.preference.PreferenceCategory
            android:title="@string/feature_cat">

        <DropDownPreference
                android:key="route"
                android:entries="@array/route_entry"
                android:entryValues="@array/route_value"
                android:summary="%s"
                android:title="@string/route_list"/>
        <SwitchPreference
                android:key="isIpv6"
                android:summary="@string/ipv6_summary"
                android:title="@string/ipv6"/>
        <SwitchPreference
                android:key="isProxyApps"
                android:summary="@string/proxied_apps_summary"
                android:title="@string/proxied_apps"/>
        <SwitchPreference
                android:key="isUdpDns"
                android:summary="@string/udp_dns_summary"
                android:title="@string/udp_dns"/>
        <be.mygod.preference.EditTextPreference
                android:key="china_dns"
                android:summary="@string/china_dns_summary"
                android:title="@string/china_dns"/>
        <be.mygod.preference.EditTextPreference
                android:key="dns"
                android:summary="@string/dns_summary"
                android:title="@string/dns"/>

    </be.mygod.preference.PreferenceCategory>

    <be.mygod.preference.PreferenceCategory
            android:title="KCP">

        <SwitchPreference
                android:key="kcp"
                android:summary="@string/kcp_summary"
                android:title="KCP"/>

        <be.mygod.preference.NumberPickerPreference
                app:min="1"
                app:max="65535"
                android:key="kcpPort"
                android:summary="@string/kcp_port_summary"
                android:title="@string/kcp_port"/>

        <be.mygod.preference.EditTextPreference
                android:key="kcpcli"
                android:summary="%s"
                android:title="@string/kcpcli"/>

    </be.mygod.preference.PreferenceCategory>

</PreferenceScreen>
